putting RapidLib.js in the right place

--- a/examples/html/RapidAPI_002.html
+++ b/examples/html/RapidAPI_002.html
@@ -15,7 +15,7 @@
     <canvas></canvas>
 </body>
 
-<script src="http://doc.gold.ac.uk/~mzbys001/RapidMixLib.js"></script>
+<script src="http://doc.gold.ac.uk/eavi/rapidmix/RapidLib.js"></script>
 <script>
 
 alert("Basic models with multiple outputs. Recording is disabled.");
