--- a/examples/html/RapidAPI_JSON.html
+++ b/examples/html/RapidAPI_JSON.html
@@ -14,7 +14,7 @@
 <body>
 <canvas></canvas>
 </body>
-<script src="http://doc.gold.ac.uk/~mzbys001/RapidMixLib.js"></script>
+<script src="http://doc.gold.ac.uk/eavi/rapidmix/RapidLib.js"></script>
 <script>
     /////////////neural network
     var rapidMix = window.RapidLib();
