--- a/examples/html/RapidAPI_006.html
+++ b/examples/html/RapidAPI_006.html
@@ -37,7 +37,7 @@
     </form>
 </body>
 
-<script src="http://doc.gold.ac.uk/~mzbys001/RapidMixLib.js"></script>
+<script src="http://doc.gold.ac.uk/eavi/rapidmix/RapidLib.js"></script>
 
 <script>
 /*jshint esnext: true */
