Added functions to buttons... should be toggles.

--- a/examples/html/RAPID-Myo/index.html
+++ b/examples/html/RAPID-Myo/index.html
@@ -87,9 +87,9 @@
 				<div class="col-md-6" id="machineLearning" >
 					<h2>Machine Learning</h2>
 					<div class="row controls btn-group" >	
-							<button class="btn btn-default" onclick="randomize()">Record</button>
-							<button class="btn btn-default" onclick="togMute()">Train</button>
-							<button class="btn btn-default" onclick="randomize()">Run</button>
+							<button class="btn btn-default" onclick="togRecord()">Record</button>
+							<button class="btn btn-default" onclick="train()">Train</button>
+							<button class="btn btn-default" onclick="togRun()">Run</button>
 					</div>					
 				</div>
 				<div class="col-md-6" id="synth"  >
