--- a/docs_doxygen/html/classseries_classification.html
+++ b/docs_doxygen/html/classseries_classification.html
@@ -244,8 +244,8 @@ template&lt;typename T &gt; </div>
 </div><div class="memdoc">
 <p>Calculate minimum and maximum cost between examples in one label and examples in a second. </p><dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">first</td><td>label to compare </td></tr>
-    <tr><td class="paramname">second</td><td>label to compare </td></tr>
+    <tr><td class="paramname">string</td><td>first label to compare </td></tr>
+    <tr><td class="paramname">string</td><td>second label to compare </td></tr>
   </table>
   </dd>
 </dl>
