--- a/docs_doxygen/html/rapid_stream_8cpp.html
+++ b/docs_doxygen/html/rapid_stream_8cpp.html
@@ -107,6 +107,10 @@ Include dependency graph for rapidStream.cpp:</div>
 <area shape="rect" id="node2" href="rapid_stream_8h.html" title="rapidStream.h" alt="" coords="5,79,110,104"/>
 </map>
 </div>
+</div><a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><dl class="section author"><dt>Author</dt><dd>Michael Zbyszynski </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>6 Feb 2017 </dd></dl>
+<dl class="section copyright"><dt>Copyright</dt><dd>Copyright © 2017 Goldsmiths. All rights reserved. </dd></dl>
 </div></div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
