--- a/docs_doxygen/html/search_window_8cpp.html
+++ b/docs_doxygen/html/search_window_8cpp.html
@@ -105,6 +105,10 @@ Include dependency graph for searchWindow.cpp:</div>
 <area shape="rect" id="node4" href="warp_path_8h.html" title="warpPath.h" alt="" coords="80,152,168,177"/>
 </map>
 </div>
+</div><a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><p>RapidLib </p><dl class="section author"><dt>Author</dt><dd>Michael Zbyszynski </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>14 Sep 2017 </dd></dl>
+<dl class="section copyright"><dt>Copyright</dt><dd>Copyright © 2017 Goldsmiths. All rights reserved. </dd></dl>
 </div></div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
